--- a/12-DivaPostprocessing.tex
+++ b/12-DivaPostprocessing.tex
@@ -114,6 +114,7 @@ Here are some examples of plots created with \gnuplot:
 \subsection{\matlab}
 %-------------------
 
+\index{Matlab}
 Tools to display contours, data, meshes, analysis and error fields are provided in the directory \texttt{diva-\divaversion/src/Matlab}. 
 
 
@@ -216,6 +217,7 @@ The provided \matlab\, scripts aim to show you how to create plots from files ge
 \subsection{NcBrowse}
 %-------------------
 
+\index{NetCDF}
 \diva provides analyse and error fields under the NetCDF (network Common Data Form) format. It is an machine-independent format to represent scientific data. For more details, please consult \url{http://www.unidata.ucar.edu/software/netcdf/}.
 
 \textsl{NcBrowse} (Linux and Windows) is available at\\
