--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -108,6 +108,7 @@ Ocean Data View \citep[ODV,][]{SCHLITZER02} is a software for the analysis and v
 \section{Matlab toolbox}
 %------------------------
 
+\index{Matlab}
 The \diva Matlab toolbox is an interface to perform 2-D analysis without having to compile the whole code and to type command in a shell. 
 
 \subsection{Installation}
@@ -143,9 +144,10 @@ The structure is the following:
 The main file is \file{divagrid.m}, while \file{testdivagrid.m} provides a few example of how the function can be used.
 Directories \directory{linux\_binaries} and \directory{windows\_binaries}
  %%%%%%%%%%%%%%%% to continue here
+ 
 \subsection{Usage}
 
-The syntax \file{divagrid.m} is close to matlabs \texttt{griddata} function, but has additional parameters.
+The syntax \file{divagrid.m} is close to matlab \file{griddata.m} function, but has additional parameters.
 
 To run, divagrid.m must be in the matlab path as well as
 contourgen.exe
