--- a/4-DivaInstallation2.tex
+++ b/4-DivaInstallation2.tex
@@ -34,7 +34,7 @@ For a quick visualization of the results, a software able to read and display th
 
 \section{Download and extraction of the archive}
 %-----------------------------------------
-
+\index{Download}
 Select a directory on your local disk (here we install in a directory \directory{\~{}/Software/}) where you want install \diva and download the archive available at \url{http://modb.oce.ulg.ac.be/mediawiki/index.php/DIVA#How_to_get_the_code.3F}.
 
 \begin{lstlisting}[style=Bash]
